# pigments

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/cli/: mod.rs
src/core/: color.rs  error.rs  mod.rs
tests/: integration_test.rs
